# dtim

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  changelog.yml  ci.yml  deploy.yml
certs/: .gitignore
config/: .gitignore  default.toml
data/: .gitignore
migrations/2025-05-21-234457_create_encrypted_indicators/: down.sql  up.sql
src/: api.rs  config.rs  crypto.rs  error.rs  errors.rs  logging.rs  main.rs  metrics.rs  models.rs  node.rs  settings.rs  uuid.rs
src/crypto/: keystore.rs  mesh_identity.rs  mod.rs  symmetric_key_manager.rs  tls_config.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs
