[package]
name = "dtim"
version = "0.1.0"
edition = "2021"
default-run = "dtim"

[dependencies]
axum = { version = "0.8", features = ["http2", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.23"
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.26"
config = "0.15"
aes-gcm = "0.10"
base64 = "0.22"
