[package]
name = "dtim"
version = "0.1.0"
edition = "2021"
default-run = "dtim"

[dependencies]
axum = { version = "0.8", features = ["http2", "tokio"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v7", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.12"
rustls = "0.23"
tokio = { version = "1.36", features = ["full"] }
tokio-rustls = "0.26"
config = "0.15"
aes-gcm = "0.10"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
regex = "1.11"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
http-body-util = "0.1"